# openai-agents-api

./: .gitignore  LICENSE  README.md  config.py  data.db  database.py  main.py  pyproject.toml  server.py
_agents/: adapter.py  context.py  events.py  models.py  triage.py
api/: chat.py  conversation.py  message.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Chat.tsx  ChatInput.tsx  Message.tsx  Sidebar.css  Sidebar.tsx
frontend/src/hooks/: useChat.ts
frontend/src/services/: api.ts
models/: __init__.py  conversation.py  file.py  message.py  mixin.py
schemas/: chat.py  conversation.py  file.py  message.py
services/: conversation.py  file.py  message.py
tests/: conftest.py  test_conversation_service.py  test_file_service.py  test_message_service.py
